还原druid数据库

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,8 @@ spring.datasource.druid.db-type=SQLITE
 spring.datasource.druid.url=jdbc:sqlite:cloud.db
 spring.datasource.druid.username=
 spring.datasource.druid.password=
-#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.test-while-idle=false
-spring.datasource.url=jdbc:sqlite:cloud.db
-spring.datasource.driver-class-name=org.sqlite.JDBC
-spring.datasource.type=org.sqlite.SQLiteDataSource
 logging.level.sql=DEBUG
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.slf4j.Slf4jImpl
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
